# regta-period

./: .flake8  .isort.cfg  .mypy.ini  .pylintrc  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: code-quality.yml  tests.yml
docs/source/: api_reference.rst  conf.py  index.rst
regta_period/: __init__.py  enums.py  periods.py
tests/: conftest.py  test_aggregation.py  test_at_time.py  test_enums.py  test_regular_offset.py  test_timezone.py  test_version.py  test_weekdays.py
