[tool.poetry]
name = "regta-period"
version = "0.0.0"
description = "Time-independent periods python package"
authors = ["Vladimir Alinsky <Vladimir@Alinsky.tech>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/SKY-ALIN/regta-period"
repository = "https://github.com/SKY-ALIN/regta-period"
keywords = ["time-independent", "periods"]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = ">=3.7.2,<4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-cov = "^3.0.0"
flake8 = "^3.0.0"
pylint = "^2.14.5"
Sphinx = "^5.1.1"
furo = "^2022.6.21"
sphinx-copybutton = "^0.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
