[tool.poetry]
name = "regta-period"
version = "0.1.0"
description = "Moment-independent periods"
authors = ["Vladimir Alinsky <Vladimir@Alinsky.tech>"]
license = "MIT"
readme = "README.md"
homepage = "https://regta-period.alinsky.tech"
repository = "https://github.com/SKY-ALIN/regta-period"
keywords = ["time", "intervals", "periods", "regta"]
include = [
    "LICENSE",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = ">=3.7.2,<4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-cov = "^3.0.0"
flake8 = "^3.0.0"
pylint = "^2.14.5"
Sphinx = "^5.1.1"
furo = "^2022.6.21"
sphinx-copybutton = "^0.5.0"
m2r2 = "^0.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
